fuel-tx/src/transaction/types/input/snapshots/fuel_tx__transaction__types__input__snapshot_tests__tx_with_predicate_message_coin_postcard.snap
---
source: fuel-tx/src/transaction/types/input/snapshot_tests.rs
expression: hex
---
0000000000000000000000000000000000000000000000000000000000000000000000001d04017bc0843dc803010402020202020202020202020202020202020202020202020202020202020202020303030303030303030303030303030303030303030303030303030303030303040505050505050505050505050505050505050505050505050505050505050505a08d060b07070707070707070707070c0808080808080808080808080000
