fuel-tx/src/transaction/types/input/snapshots/fuel_tx__transaction__types__input__snapshot_tests__tx_with_signed_coin_snapshot_canonical.snap
---
source: fuel-tx/src/transaction/types/input/snapshot_tests.rs
expression: hex
snapshot_kind: text
---
00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000003f000000000000000100000000000000000000000000000000000000000000000100000000000003e8000000000000007b00000000000f424000000000000001c800000000000000000000000000000000010101010101010101010101010101010101010101010101010101010101010100000000000000020202020202020202020202020202020202020202020202020202020202020202000000000000000b0505050505050505050505050505050505050505050505050505050505050505000000000000002e00000000000000050000000000000004000000000000000000000000000000000000000000000000
