fuel-tx/src/transaction/types/input/snapshots/fuel_tx__transaction__types__input__snapshot_tests__tx_with_signed_coin_snapshot_json.snap
---
source: fuel-tx/src/transaction/types/input/snapshot_tests.rs
expression: json
snapshot_kind: text
---
{
  "Script": {
    "body": {
      "script_gas_limit": 0,
      "receipts_root": "0000000000000000000000000000000000000000000000000000000000000000",
      "script": [],
      "script_data": []
    },
    "policies": {
      "bits": "Tip | WitnessLimit | Maturity | MaxFee | Expiration",
      "values": [
        1,
        1000,
        123,
        1000000,
        456
      ]
    },
    "inputs": [
      {
        "CoinSigned": {
          "utxo_id": {
            "tx_id": "0101010101010101010101010101010101010101010101010101010101010101",
            "output_index": 2
          },
          "owner": "0202020202020202020202020202020202020202020202020202020202020202",
          "amount": 11,
          "asset_id": "0505050505050505050505050505050505050505050505050505050505050505",
          "tx_pointer": {
            "block_height": 46,
            "tx_index": 5
          },
          "witness_index": 4,
          "predicate_gas_used": null,
          "predicate": null,
          "predicate_data": null
        }
      }
    ],
    "outputs": [],
    "witnesses": []
  }
}
