fuel-tx/src/transaction/types/input/snapshots/fuel_tx__transaction__types__input__snapshot_tests__tx_with_signed_coin_snapshot_postcard.snap
---
source: fuel-tx/src/transaction/types/input/snapshot_tests.rs
expression: hex
---
0000000000000000000000000000000000000000000000000000000000000000000000001f0501e8077bc0843dc803010001010101010101010101010101010101010101010101010101010101010101010202020202020202020202020202020202020202020202020202020202020202020b05050505050505050505050505050505050505050505050505050505050505052e05040000
